--- a/SMSAPP-bootstrap/src/main/resources/application.properties
+++ b/SMSAPP-bootstrap/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/smsapp
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=MLPattitude1u$
 
 #LSFB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
